# vlm-experiments

./: .env.example  README.md  hello.py  pyproject.toml  requirements.txt  settings.ini
.github/workflows/: deploy.yaml
_proc/: 00_phi3-instruct.ipynb  index.ipynb
_proc/_docs/: robots.txt
nbs/: 00_phi3-instruct.ipynb  index.ipynb  nbdev.yml
vlm_experiments/: _modidx.py
