[project]
name = "vlm-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.5",
    "mlx-vlm>=0.0.13",
    "nbdev>=2.3.29",
    "pretzelai>=4.2.11",
    "setuptools>=74.1.2",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchvision>=0.19.1",
]
